Create base to wrapper

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,11 @@
     "extends": "airbnb-base",
     "plugins": [
         "import"
-    ]
+    ],
+    "env": {
+      "mocha": true
+    },
+    "globals": {
+      "fetch": true
+    }
 }
