--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,9 @@
     "env": {
       "mocha": true
     },
+    "rules": {
+      "import/prefer-default-export": "off"
+    },
     "globals": {
       "fetch": true
     }
