--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A wrapper to work with the Spotify Web API.",
   "main": "src/index.js",
   "scripts": {
-    "clear": "rimraf lib",
-    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "clear": "./node_modules/.bin/rimraf lib",
+    "build": "./node_modules/.bin/babel --out-dir lib src",
     "build:watch": "npm run build -- --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
@@ -38,7 +38,7 @@
   },
   "homepage": "https://gitlab.com/leandrino/spotify-wrapper#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
