--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ cache:
   directories:
     "node_modules"
 before_script:
+  - npm run clear
   - npm run build
   - npm run build:umd
   - npm rum build:umd:min
 after_success:
-  -npm run test:coverage
+  -npm run coveralls
