--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/leandrino/spotify-wrapper.git"
+    "url": "https://github.com/leandrino/spotify-wrapper.git"
   },
   "keywords": [
     "js",
@@ -41,9 +41,9 @@
   "author": "Leandro Alexandrino <alexandrinowd@gmail.com> (http://leandrino.me/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://gitlab.com/leandrino/spotify-wrapper/issues"
+    "url": "https://github.com/leandrino/spotify-wrapper/issues"
   },
-  "homepage": "https://gitlab.com/leandrino/spotify-wrapper#readme",
+  "homepage": "https://github.com/leandrino/spotify-wrapper#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
